Source/WebCore/rendering/RenderLayer.cpp
@@ -1157,6 +1157,26 @@ void RenderLayer::updateDescendantDependentFlags(HashSet<const RenderObject*>* o
     }
 }
 
+#if USE(ACCELERATED_COMPOSITING)
+// Return true if clipping change requires layer update.
+bool RenderLayer::updateDescendantClippingContext(bool addClipping)
+{
+    bool layerNeedsRebuild = false;
+    for (RenderLayer* child = firstChild(); child; child = child->nextSibling()) {
+        RenderLayerBacking* backing = child->backing();
+        // Update layer context when new clipping is added or existing clipping is removed.
+        if (backing && (addClipping || backing->hasAncestorClippingLayer())) {
+            if (backing->updateAncestorClippingLayer(compositor().clippedByAncestor(child)))
+                layerNeedsRebuild = true;
+        }
+
+        if (child->updateDescendantClippingContext(addClipping))
+            layerNeedsRebuild = true;
+    }
+    return layerNeedsRebuild;
+}
+#endif
+
 void RenderLayer::dirty3DTransformedDescendantStatus()
 {
     RenderLayer* curr = stackingContainer();
@@ -6229,6 +6249,18 @@ void RenderLayer::styleChanged(StyleDifference, const RenderStyle* oldStyle)
         compositor().setCompositingLayersNeedRebuild();
     else if (isComposited())
         backing()->updateGraphicsLayerGeometry();
+
+    if (oldStyle) {
+        // Compositing layers keep track of whether they are clipped by any of the ancestors.
+        // When the current layer's clipping behaviour changes, we need to propagate it to the descendants.
+        RenderStyle* style = renderer().style();
+        bool wasClipping = oldStyle->hasClip() || oldStyle->overflowX() != OVISIBLE || oldStyle->overflowY() != OVISIBLE;
+        bool isClipping = style->hasClip() || style->overflowX() != OVISIBLE || style->overflowY() != OVISIBLE;
+        if (isClipping != wasClipping) {
+            if (updateDescendantClippingContext(isClipping))
+                compositor().setCompositingLayersNeedRebuild();
+        }
+    }
 #endif
 
 #if ENABLE(CSS_FILTERS)
