Source/WebCore/rendering/RenderLayer.h
@@ -1047,6 +1047,9 @@ private:
     void setAncestorChainHasVisibleDescendant();
 
     void updateDescendantDependentFlags(HashSet<const RenderObject*>* outOfFlowDescendantContainingBlocks = 0);
+#if USE(ACCELERATED_COMPOSITING)
+    bool updateDescendantClippingContext(bool addClipping);
+#endif
 
     // This flag is computed by RenderLayerCompositor, which knows more about 3d hierarchies than we do.
     void setHas3DTransformedDescendant(bool b) { m_has3DTransformedDescendant = b; }
