Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -150,7 +150,8 @@ RenderLayerBacking::RenderLayerBacking(RenderLayer* layer)
 
 RenderLayerBacking::~RenderLayerBacking()
 {
-    updateClippingLayers(false, false);
+    updateAncestorClippingLayer(false);
+    updateDescendantClippingLayer(false);
     updateOverflowControlsLayers(false, false, false);
     updateForegroundLayer(false);
     updateBackgroundLayer(false);
@@ -512,7 +513,10 @@ bool RenderLayerBacking::updateGraphicsLayerConfiguration()
     if (m_owningLayer->needsCompositedScrolling())
         needsDescendentsClippingLayer = false;
 
-    if (updateClippingLayers(compositor().clippedByAncestor(m_owningLayer), needsDescendentsClippingLayer))
+    if (updateAncestorClippingLayer(compositor().clippedByAncestor(m_owningLayer)))
+        layerConfigChanged = true;
+
+    if (updateDescendantClippingLayer(needsDescendentsClippingLayer))
         layerConfigChanged = true;
 
     if (updateOverflowControlsLayers(requiresHorizontalScrollbarLayer(), requiresVerticalScrollbarLayer(), requiresScrollCornerLayer()))
@@ -969,8 +973,8 @@ void RenderLayerBacking::updateDrawsContent(bool isSimpleContainer)
         m_backgroundLayer->setDrawsContent(hasPaintedContent);
 }
 
-// Return true if the layers changed.
-bool RenderLayerBacking::updateClippingLayers(bool needsAncestorClip, bool needsDescendantClip)
+// Return true if the layer changed.
+bool RenderLayerBacking::updateAncestorClippingLayer(bool needsAncestorClip)
 {
     bool layersChanged = false;
 
@@ -980,13 +984,21 @@ bool RenderLayerBacking::updateClippingLayers(bool needsAncestorClip, bool needs
             m_ancestorClippingLayer->setMasksToBounds(true);
             layersChanged = true;
         }
-    } else if (m_ancestorClippingLayer) {
+    } else if (hasAncestorClippingLayer()) {
         willDestroyLayer(m_ancestorClippingLayer.get());
         m_ancestorClippingLayer->removeFromParent();
         m_ancestorClippingLayer = nullptr;
         layersChanged = true;
     }
     
+    return layersChanged;
+}
+
+// Return true if the layer changed.
+bool RenderLayerBacking::updateDescendantClippingLayer(bool needsDescendantClip)
+{
+    bool layersChanged = false;
+
     if (needsDescendantClip) {
         if (!m_childContainmentLayer && !m_usingTiledCacheLayer) {
             m_childContainmentLayer = createGraphicsLayer("Child clipping Layer");
